...
                                                <rect key="frame" x="0.0" y="0.0" width="155" height="40"/>
                                                <state key="normal" title="Button"/>
                                                <buttonConfiguration key="configuration" style="tinted" title="clear"/>
                                                <connections>
                                                    <action selector="textFieldButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="2x8-9R-Vsm"/>
...
                                                <rect key="frame" x="179" y="0.0" width="155" height="40"/>
                                                <state key="normal" title="Button"/>
                                                <buttonConfiguration key="configuration" style="filled" title="done"/>
                                                <connections>
                                                    <action selector="textFieldButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="VdU-ny-eO6"/>
...
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="35"/>
                                        <state key="normal" title="Calculate">
                                            <color key="titleColor" red="0.97254901959999995" green="1" blue="0.99215686270000003" alpha="1" colorSpace="calibratedRGB"/>
                                        </state>
...
                                                        <fontDescription key="fontDescription" type="system" pointSize="35"/>
                                                        <color key="tintColor" red="0.0" green="0.69019607839999997" blue="0.41960784309999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                        <state key="normal" title="20%">
                                                            <color key="titleColor" red="0.0" green="0.69019607839999997" blue="0.41960784309999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                        </state>
...
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="e.g. 123.56" textAlignment="center" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="wcN-ka-Q4F">
                                        <rect key="frame" x="0.0" y="56" width="414" height="48"/>
                                        <color key="tintColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                <rect key="frame" x="0.0" y="0.0" width="414" height="300"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="56.32" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uLJ-ii-hft">
                                        <rect key="frame" x="0.0" y="168" width="414" height="100"/>
                                        <constraints>
...
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Split between 2 people, with 10% tip." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HGt-bn-sCv">
                                <rect key="frame" x="50" y="305" width="314" height="117"/>
                                <constraints>
...
