...
    
    @IBAction func calculatePressed(_ sender: UIButton) {
        billTextField.endEditing(true)
//        handle calculation
        let billAmount = Double(billTextField.text ?? "")
        if billAmount == nil {
            payPerPerson = "Empty Bill"
        } else {
            let result = (billAmount! * (1 + tipFactor))/numberOfPeople
            payPerPerson = String(format:"%.2f", result)
        }
        
        performSegue(withIdentifier: "resultSegue", sender: self)
...
